welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:5: error: Non-zero integral values may not have a leading zero.
    return 10:00
              ^alarmClock:8: error: Non-zero integral values may not have a leading zero.
  	return 10:00
                  ^alarmClock:9: error: Non-zero integral values may not have a leading zero.
  return 7:00
           ^alarmClock:5: error: identifier expected but something found.
    return 10:00
              ^alarmClock:8: error: identifier expected but something found.
  	return 10:00
                  ^